[package]
name = "swas"
version = "0.1.0"
authors = ["lonely-code-cube"]
edition = "2021"
description = "The swas library made as a joke"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3