[package]
name = "swas"
version = "0.3.1"
authors = ["lonely-code-cube"]
edition = "2021"
description = "Swas is a rust library + CLI tool  that tells you when swas will upload new video through complex calculations. It also lets you search and play youtube videos of swas and other channels. Searching about youtube channels is also an option. Basically it's a youtube search cli tool written in rust."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lonely-code-cube/swas"
repository = "https://github.com/lonely-code-cube/swas"
keywords = ["swas", "youtube", "video", "cli"]
categories = ["command-line-interface"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["application"]
application = ["clap"]

[lib]
name = "swas"
path = "src/lib.rs"

[[bin]]
name = "swas"
path = "src/bin/swas.rs"

[dependencies]
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
tinyjson = "2"
clap = { version = "3.1.6", features = ["derive", "cargo"], optional = true }
colored = "2.0.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3